// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header matches snapshot when logged in 1`] = `
<header
  className="usa-header usa-header-extended tm-header"
  role="banner"
>
  <GovBanner />
  <div
    className="usa-navbar"
  >
    <button
      className="usa-menu-btn"
    >
      Menu
    </button>
    <div
      className="usa-logo"
      id="logo"
    >
      <em
        className="usa-logo-text"
      >
        <Link
          replace={false}
          to="/"
        >
          TALENTMAP
        </Link>
      </em>
    </div>
  </div>
  <nav
    className="usa-nav"
  >
    <div
      className="usa-nav-inner"
    >
      <button
        className="usa-nav-close"
      >
        <img
          alt="close"
          src="close.svg"
        />
      </button>
      <div
        className="usa-nav-secondary"
      >
        <form
          className="usa-search usa-search-small js-search-form usa-sr-only"
        >
          <div
            role="search"
          >
            <label
              className="usa-sr-only"
              htmlFor="search-field-small"
            >
              Search small
            </label>
            <input
              id="search-field-small"
              name="search-small"
              type="search"
            />
            <button
              type="submit"
            >
              <span
                className="usa-sr-only"
              >
                Search
              </span>
            </button>
          </div>
        </form>
        <ul
          className="usa-unstyled-list usa-nav-secondary-links mobile-nav"
        >
          <li
            className="mobile-nav-only"
          >
            Signed in as test
          </li>
          <hr
            className="mobile-nav-only"
          />
          <li
            className="js-search-button-container"
          >
            <button
              className="usa-header-search-button js-search-button"
            >
              Search
            </button>
          </li>
          <li>
            <Link
              replace={false}
              to="/"
            >
              Home
            </Link>
          </li>
          <li>
            <a
              href="https://github.com/18F/State-TalentMAP"
            >
              About
            </a>
          </li>
          <li>
            <a
              href="https://github.com/18F/State-TalentMAP/issues"
            >
              Feedback
            </a>
          </li>
          <span
            className="usa-unstyled-list mobile-nav-only"
          >
            <hr />
            <li>
              <Link
                replace={false}
                to="/"
              >
                Profile
              </Link>
            </li>
            <li>
              <Link
                id="login-mobile"
                onClick={[Function]}
                replace={false}
                to="login"
              >
                Logout
              </Link>
            </li>
          </span>
          <span
            className="desktop-nav-only"
          >
            <li>
              <AccountDropdown
                logoutRequest={[Function]}
                userProfile={
                  Object {
                    "user": Object {
                      "username": "test",
                    },
                  }
                }
              />
            </li>
          </span>
        </ul>
      </div>
    </div>
  </nav>
  <div
    className="usa-overlay"
  />
</header>
`;

exports[`Header matches snapshot when logged out 1`] = `
<header
  className="usa-header usa-header-extended tm-header"
  role="banner"
>
  <GovBanner />
  <div
    className="usa-navbar"
  >
    <button
      className="usa-menu-btn"
    >
      Menu
    </button>
    <div
      className="usa-logo"
      id="logo"
    >
      <em
        className="usa-logo-text"
      >
        <Link
          replace={false}
          to="/"
        >
          TALENTMAP
        </Link>
      </em>
    </div>
  </div>
  <nav
    className="usa-nav"
  >
    <div
      className="usa-nav-inner"
    >
      <button
        className="usa-nav-close"
      >
        <img
          alt="close"
          src="close.svg"
        />
      </button>
      <div
        className="usa-nav-secondary"
      >
        <form
          className="usa-search usa-search-small js-search-form usa-sr-only"
        >
          <div
            role="search"
          >
            <label
              className="usa-sr-only"
              htmlFor="search-field-small"
            >
              Search small
            </label>
            <input
              id="search-field-small"
              name="search-small"
              type="search"
            />
            <button
              type="submit"
            >
              <span
                className="usa-sr-only"
              >
                Search
              </span>
            </button>
          </div>
        </form>
        <ul
          className="usa-unstyled-list usa-nav-secondary-links mobile-nav"
        >
          <li
            className="mobile-nav-only"
          />
          <hr
            className="mobile-nav-only"
          />
          <li
            className="js-search-button-container"
          >
            <button
              className="usa-header-search-button js-search-button"
            >
              Search
            </button>
          </li>
          <li>
            <Link
              replace={false}
              to="/"
            >
              Home
            </Link>
          </li>
          <li>
            <a
              href="https://github.com/18F/State-TalentMAP"
            >
              About
            </a>
          </li>
          <li>
            <a
              href="https://github.com/18F/State-TalentMAP/issues"
            >
              Feedback
            </a>
          </li>
          <span
            className="usa-unstyled-list mobile-nav-only"
          >
            <hr />
            <li>
              <Link
                replace={false}
                to="/"
              >
                Profile
              </Link>
            </li>
            <li>
              <Link
                id="login-mobile"
                onClick={[Function]}
                replace={false}
                to="login"
              >
                Logout
              </Link>
            </li>
          </span>
          <span
            className="desktop-nav-only"
          >
            <li>
              <Link
                id="login-desktop"
                replace={false}
                to="login"
              >
                Login
              </Link>
            </li>
          </span>
        </ul>
      </div>
    </div>
  </nav>
  <div
    className="usa-overlay"
  />
</header>
`;
